--- a/.github/workflows/spinup-destroy.yml
+++ b/.github/workflows/spinup-destroy.yml
@@ -10,7 +10,7 @@ env:
   AZURE_APP_PLAN: actions-ttt-deployment
   AZURE_LOCATION: '"East US"'
   ###############################################
-  ### Replace <username> with GitHub username ###
+  ### Replace <username> with GitHub username MarioZavaletaAxity ###
   ###############################################
   AZURE_WEBAPP_NAME: MarioZavaletaAxity-ttt-app
 
